--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+# IDE directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store*
+
 .history
 build
