--- a/I2/publish/package.json
+++ b/I2/publish/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "publish-fixed-supply-silver",
+  "name": "publish",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
