Sync README and gitignore with main

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
+# IDE directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.env
+
+# OS generated files
+.DS_Store*
+
 .history
 build
+node_modules
+target 
+Move.lock
