--- a/J3/api/package.json
+++ b/J3/api/package.json
@@ -14,7 +14,8 @@
     "@mysten/sui": "^1.30.1",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
