--- a/J3/docker-compose.yml
+++ b/J3/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3"
+
 services:
   prometheus:
     image: prom/prometheus
@@ -6,3 +7,16 @@ services:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana-storage:/var/lib/grafana
+
+volumes:
+  grafana-storage:
