--- a/J3/api/package.json
+++ b/J3/api/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
